<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/text_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_bookmark_border_24"
        android:title="@string/text_bookmark_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_table_of_contents"
        android:icon="@drawable/ic_toc_24"
        android:title="@string/text_table_of_contents"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_preferences"
        android:icon="@drawable/ic_tune_24"
        android:title="@string/text_preferences"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_read_aloud"
        android:icon="@drawable/ic_volume_up_24"
        android:title="@string/text_read_aloud"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_bookmarks"
        android:title="@string/text_bookmarks"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_scroll_mode"
        android:checkable="true"
        android:title="@string/text_scroll_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_volume_keys_turn_pages"
        android:checkable="true"
        android:title="@string/text_volume_keys_turn_pages"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tap_zones"
        android:title="@string/text_tap_zones"
        app:showAsAction="never">
        <menu>
            <group
                android:id="@+id/group_tap_zones"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_tap_zones_off"
                    android:title="@string/text_tap_zones_off" />
                <item
                    android:id="@+id/action_tap_zones_horizontal"
                    android:title="@string/text_tap_zones_horizontal" />
                <item
                    android:id="@+id/action_tap_zones_vertical"
                    android:title="@string/text_tap_zones_vertical" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_external_links_direct"
        android:checkable="true"
        android:title="@string/text_external_links_direct"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_restart_book"
        android:title="@string/text_restart_book"
        app:showAsAction="never" />

</menu>
